# cpp-smoke-game

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
assets/models/dice/: dice.mtl
assets/shaders/: basic.frag.glsl  basic.vert.glsl  colored.frag.glsl  colored.vert.glsl
modules/: CMakeLists.txt
modules/glad/: glad.c  glad.h
src/: CMakeLists.txt  app.cpp  app.hpp  main.cpp
src/loaders/: CMakeLists.txt  mesh_loader.cpp  mesh_loader.hpp  model_loader.cpp  model_loader.hpp  obj_loader.cpp  obj_loader.hpp  texture_loader.cpp  texture_loader.hpp
src/log/: CMakeLists.txt  log.cpp  log.hpp
src/logging/: CMakeLists.txt  logger.cpp  logger.hpp
src/math/: CMakeLists.txt  camera.cpp  camera.hpp  transform.cpp  transform.hpp  vector.cpp  vector.hpp
src/physics/: vector.hpp
src/renderer/: CMakeLists.txt  buffer.cpp  buffer.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  model.hpp  program.cpp  program.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertex.hpp
src/servers/: CMakeLists.txt  material_server.cpp  material_server.hpp  program_server.cpp  program_server.hpp  server.cpp  server.hpp
src/utils/: CMakeLists.txt  color.cpp  color.hpp  file.cpp  file.hpp
tests/: CMakeLists.txt  obj_vec_parsing.cpp  obj_vec_parsing_test.cpp
